# receipt-parser

./: .env.sample  .gitignore  .google_client_secret.json.sample  .google_client_secret.json.save  APPWRITE_FASTAPI_INTEGRATION.md  Pipfile  README.md  UPC.py  alembic.ini  appwrite.json  azure-deploy.sh  db_backup.py  docker-compose.local.yml  fastapi_server.py  function_app.py  local-appwrite-deploy.sh  local-deploy.sh  local_appwrite_functions.py  local_function_runner.py  local_server.py  migrations.py  policies.json  pyproject.toml  requirements.txt  rg-export.bicep  rg-export.json
.github/workflows/: deploy-appwrite.yml  main_plante-receipt-parser.yml  main_plante-receipt-parser.yml.disabled
alembic/versions/: 003_conflicting_schema_up.sql  initial_001_schema.py  legacy_000_schema.py  legacy_000_schema_up.sql
appwrite_functions/: main.py  requirements.txt
appwrite_functions/parse_from_url/: main.py  requirements.txt
azure_functions/: .funcignore  function_app.py  host.json
azure_infra/: main.bicep
azure_infra/.github/workflows/: gitops.yml
infra/.github/workflows/: gitops.yml
infra/bicep/: README.md  main.bicep
infra/bicep/modules/: app-insights.bicep  cosmosdb.bicep  function.bicep
infra/bicep1/: appservice-appsettings-config.bicep  main.bicep
src/: constants.py
src/adapters/: appwrite_functions.py  doppler.py
src/adapters/api/: appwrite_fastapi_adapter.py  appwrite_functions.py  fastapi_app.py
src/adapters/auth/: google_auth.py
src/adapters/db/: base.py  cosmos_db_core.py  postgresql_core.py
src/adapters/logger/: appwrite.py  default.py  sentry.py
src/db/: README.md  __init__.py  appwrite_db_api.py  db_api_base.py  local_db_api.py
src/handlers/: add_barcodes.py  link_shop.py  parse_from_url.py  shops.py
src/helpers/: appwrite.py  azure_function.py  common.py  logging.py  osm.py  session.py
src/parsers/: receipt_parser_base.py
src/parsers/sfs_md/: receipt_parser.py
src/schemas/: barcode.py  common.py  osm_data.py  osm_object.py  purchased_item.py  receipt.py  receipt_url.py  request_schemas.py  schema_base.py  shop.py  shop_item.py  user.py  user_auth.py  user_identity.py
src/schemas/sfs_md/: receipt.py
src/static/templates/: login-en.html
src/tests/: __init__.py
src/tests/functional/: test_function_app.py
src/tests/integration/: test_cosmos_db_core.py
src/tests/integration/handlers/: test_parse_from_url_postgres.py
src/tests/stubs/receipts/sfs_md/: expected_objects.py  linella2.html  nanu.html
src/tests/unit/: test_db_backup.py  test_migrations.py
src/tests/unit/adapters/auth/: test_google_auth.py
src/tests/unit/handlers/: test_add_barcodes.py  test_link_shop.py  test_parse_from_url.py
src/tests/unit/helpers/: test_appwrite.py  test_azure_function.py  test_common.py  test_osm.py  test_session.py
src/tests/unit/schemas/: test_osm_data.py  test_osm_object.py  test_purchased_item.py  test_receipt_url.py  test_shop.py  test_shop_item.py  test_user.py  test_user_auth.py  test_user_identity.py  test_user_session.py
(+4 files in other folders)
