[project]
name = "receipt-parser"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "alembic>=1.17.2",
    "azure-core",
    "azure-cosmos>=4.3.1",
    "azure-functions",
    "cachecontrol",
    "coverage",
    "doppler-sdk>=1.3.0",
    "fastapi>=0.128.0",
    "google-auth-oauthlib",
    "jinja2==3.1.6",
    "osmpythontools>=0.3.6",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]",
    "python-dotenv>=1.2.1",
    "six>=1.17.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "black",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "testcontainers[postgres]>=4.13.3",
]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
