[project]
name = "receipt-parser"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "alembic",
    "doppler-sdk",
    "jinja2",
    "osmpythontools",
    "psycopg2-binary",
    "pydantic[email]",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "black",
    "coverage",
    "pylint",
    "pytest",
    "pytest-cov",
    "testcontainers[postgres]",
]

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
