[project]
name = "receipt-parser"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "alembic",
    "doppler-sdk",
    "jinja2",
    "osmpythontools",
    "pydantic[email]",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pylint>=4.0.4",
    "uvicorn>=0.40.0",
    "coverage",
    "pytest",
    "pytest-cov",
    "fastapi>=0.129.0",
]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",    # C0114
    "missing-class-docstring",     # C0115
    "missing-function-docstring",  # C0116,
    "too-few-public-methods",
]

[tool.pylint.format]
max-line-length = 90

[tool.pylint.basic]
good-names = ["e", "logger", "id"]

[tool.pylint.similarities]
ignore-imports = true

[tool.black]
line-length = 90
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
